Домашнее задание #2 Часть 2

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis commodi dolorem doloremque, hic impedit itaque iure molestiae non, officia quam repellendus tempora totam. Asperiores consequuntur minima nostrum quaerat saepe?
         </p>
         <p class="paragraph-2">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis commodi dolorem doloremque, hic impedit itaque iure molestiae non, officia quam repellendus tempora totam. Asperiores consequuntur minima nostrum quaerat saepe?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquid aperiam cumque doloremque dolores doloribus, earum eum eveniet expedita id iure omnis porro quod sit soluta, ut vel velit.
         </p>
         <p class="paragraph-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci blanditiis commodi dolorem doloremque, hic impedit itaque iure molestiae non, officia quam repellendus tempora totam. Asperiores consequuntur minima nostrum quaerat saepe?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, eveniet sequi tenetur ullam unde vel. Aspernatur consequuntur dolores doloribus, et eveniet ex, iste magni maxime, nam repellendus sapiente sit voluptates?
+        </p>
+        <p align="center" class="paragraph-4">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi consequatur dolorum et harum id placeat repellat rerum tempora. Iure iusto nisi repellat! Alias at corporis harum inventore nobis quae sequi?
         </p>
         <span>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias consequuntur corporis eligendi est facere iusto mollitia qui quod rem vitae. Amet delectus dolore, fuga illum quam quod repudiandae. Mollitia, ratione?
